--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
     <section class="hero-product-visual py-16 px-6">
         <div class="max-w-7xl mx-auto reveal">
             <img
-                src="C:\Users\91733\Desktop\Img\Hero Section\Dashboard.png"
+                src="/Img/Hero Section/Dashboard.png"
                 alt="MarAI Dashboard overview showing multi-client marketing metrics, tools, and workflows"
                 class="hero-dashboard-image w-full rounded-3xl shadow-2xl border border-white/10"
                 onclick="openLightbox(this.src, this.alt)"
@@ -808,7 +808,7 @@
         <div id="workflowSlider">
             <div class="workflow-slide">
                 <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/Workflow & Session Memory/SEO Strategy.png', 'SEO Strategy')">
-                    <img src="C:\Users\91733\Desktop\Img\Workflow & Session Memory\SEO Strategy.png" alt="SEO Strategy" />
+                    <img src="/Img/Workflow & Session Memory/SEO Strategy.png" alt="SEO Strategy" />
                     <div class="image-overlay">
                         <span class="overlay-text">Click for preview</span>
                     </div>
@@ -817,7 +817,7 @@
 
             <div class="workflow-slide">
                 <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/Workflow & Session Memory/Content Creator.png', 'Content Creator')">
-                    <img src="C:\Users\91733\Desktop\Img\Workflow & Session Memory\Content Creator.png" alt="Content Creator" />
+                    <img src="/Img/Workflow & Session Memory/Content Creator.png" alt="Content Creator" />
                     <div class="image-overlay">
                         <span class="overlay-text">Click for preview</span>
                     </div>
@@ -826,7 +826,7 @@
 
             <div class="workflow-slide">
                 <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/Workflow & Session Memory/Content Optimizer.png', 'Content Optimizer')">
-                    <img src="C:\Users\91733\Desktop\Img\Workflow & Session Memory\Content Optimizer.png" alt="Content Optimizer" />
+                    <img src="/Img/Workflow & Session Memory/Content Optimizer.png" alt="Content Optimizer" />
                     <div class="image-overlay">
                         <span class="overlay-text">Click for preview</span>
                     </div>
@@ -1121,21 +1121,21 @@
     <div class="optimizer-score-grid grid md:grid-cols-3 gap-6">
         
         <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/SEO + GEO Content Optimizer/SEO.png', 'SEO score analysis')">
-            <img src="C:\Users\91733\Desktop\Img\SEO + GEO Content Optimizer\SEO.png" alt="SEO score analysis" class="w-full rounded-2xl border border-white/10 shadow-xl" />
+            <img src="/Img/SEO + GEO Content Optimizer/SEO.png" alt="SEO score analysis" class="w-full rounded-2xl border border-white/10 shadow-xl" />
             <div class="image-overlay">
                 <span class="overlay-text">Click for preview</span>
             </div>
         </div>
 
         <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/SEO + GEO Content Optimizer/GEO.png', 'GEO score analysis')">
-            <img src="C:\Users\91733\Desktop\Img\SEO + GEO Content Optimizer\GEO.png" alt="GEO score analysis" class="w-full rounded-2xl border border-white/10 shadow-xl" />
+            <img src="/Img/SEO + GEO Content Optimizer/GEO.png" alt="GEO score analysis" class="w-full rounded-2xl border border-white/10 shadow-xl" />
             <div class="image-overlay">
                 <span class="overlay-text">Click for preview</span>
             </div>
         </div>
 
         <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/SEO + GEO Content Optimizer/Brand.png', 'Brand alignment score')">
-            <img src="C:\Users\91733\Desktop\Img\SEO + GEO Content Optimizer\Brand.png" alt="Brand alignment score" class="w-full rounded-2xl border border-white/10 shadow-xl" />
+            <img src="/Img/SEO + GEO Content Optimizer/Brand.png" alt="Brand alignment score" class="w-full rounded-2xl border border-white/10 shadow-xl" />
             <div class="image-overlay">
                 <span class="overlay-text">Click for preview</span>
             </div>
@@ -1317,7 +1317,7 @@
     <div id="citationSlider">
         <div class="citation-slide">
             <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/AI Citation Intelligence/Visibility Score.png', 'AI visibility score')">
-                <img src="C:\Users\91733\Desktop\Img\AI Citation Intelligence\Visibility Score.png" alt="AI visibility score" />
+                <img src="/Img/AI Citation Intelligence/Visibility Score.png" alt="AI visibility score" />
                 <div class="image-overlay">
                     <span class="overlay-text">Click for preview</span>
                 </div>
@@ -1326,7 +1326,7 @@
 
         <div class="citation-slide">
             <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/AI Citation Intelligence/Citations.png', 'AI citation tracking')">
-                <img src="C:\Users\91733\Desktop\Img\AI Citation Intelligence\Citations.png" alt="AI citation tracking" />
+                <img src="/Img/AI Citation Intelligence/Citations.png" alt="AI citation tracking" />
                 <div class="image-overlay">
                     <span class="overlay-text">Click for preview</span>
                 </div>
@@ -1335,7 +1335,7 @@
 
         <div class="citation-slide">
             <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/AI Citation Intelligence/Cited URL.png', 'Cited URLs')">
-                <img src="C:\Users\91733\Desktop\Img\AI Citation Intelligence\Cited URL.png" alt="Cited URLs" />
+                <img src="/Img/AI Citation Intelligence/Cited URL.png" alt="Cited URLs" />
                 <div class="image-overlay">
                     <span class="overlay-text">Click for preview</span>
                 </div>
@@ -1427,7 +1427,7 @@
                     </div>
 <div class="google-data-visual mb-8">
                     <img
-                        src="C:\Users\91733\Desktop\Img\Google Data + Real Metrics\Search Data.png"
+                        src="/Img/Google Data + Real Metrics/Search Data.png"
                         alt="Google Search Console and Analytics data integrated into MarAI"
                         class="w-full rounded-2xl border border-white/10 shadow-xl"
                         onclick="openLightbox(this.src, this.alt)"
@@ -1458,7 +1458,7 @@
                 -->
                 <div class="asset-library-visual max-w-5xl mx-auto mb-12">
                     <img
-                        src="C:\Users\91733\Desktop\Img\Asset Library\Saved Assets.png"
+                        src="/Img/Asset Library/Saved Assets.png"
                         alt="Saved assets library in MarAI showing reusable marketing outputs"
                         class="w-full rounded-3xl border border-white/10 shadow-2xl"
                         onclick="openLightbox(this.src, this.alt)"
