--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
     <div class="workflow-viewport">
         <div id="workflowSlider">
             <div class="workflow-slide">
-                <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/Workflow & Session Memory/SEO Strategy.png', 'SEO Strategy')">
+                <div class="image-container" onclick="openLightbox('/Img/Workflow & Session Memory/SEO Strategy.png', 'SEO Strategy')">
                     <img src="/Img/Workflow & Session Memory/SEO Strategy.png" alt="SEO Strategy" />
                     <div class="image-overlay">
                         <span class="overlay-text">Click for preview</span>
@@ -816,7 +816,7 @@
             </div>
 
             <div class="workflow-slide">
-                <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/Workflow & Session Memory/Content Creator.png', 'Content Creator')">
+                <div class="image-container" onclick="openLightbox('/Img/Workflow & Session Memory/Content Creator.png', 'Content Creator')">
                     <img src="/Img/Workflow & Session Memory/Content Creator.png" alt="Content Creator" />
                     <div class="image-overlay">
                         <span class="overlay-text">Click for preview</span>
@@ -825,7 +825,7 @@
             </div>
 
             <div class="workflow-slide">
-                <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/Workflow & Session Memory/Content Optimizer.png', 'Content Optimizer')">
+                <div class="image-container" onclick="openLightbox('/Img/Workflow & Session Memory/Content Optimizer.png', 'Content Optimizer')">
                     <img src="/Img/Workflow & Session Memory/Content Optimizer.png" alt="Content Optimizer" />
                     <div class="image-overlay">
                         <span class="overlay-text">Click for preview</span>
@@ -1120,21 +1120,21 @@
                 <div class="optimizer-visual max-w-6xl mx-auto mb-12">
     <div class="optimizer-score-grid grid md:grid-cols-3 gap-6">
         
-        <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/SEO + GEO Content Optimizer/SEO.png', 'SEO score analysis')">
+        <div class="image-container" onclick="openLightbox('/Img/SEO + GEO Content Optimizer/SEO.png', 'SEO score analysis')">
             <img src="/Img/SEO + GEO Content Optimizer/SEO.png" alt="SEO score analysis" class="w-full rounded-2xl border border-white/10 shadow-xl" />
             <div class="image-overlay">
                 <span class="overlay-text">Click for preview</span>
             </div>
         </div>
 
-        <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/SEO + GEO Content Optimizer/GEO.png', 'GEO score analysis')">
+        <div class="image-container" onclick="openLightbox('/Img/SEO + GEO Content Optimizer/GEO.png', 'GEO score analysis')">
             <img src="/Img/SEO + GEO Content Optimizer/GEO.png" alt="GEO score analysis" class="w-full rounded-2xl border border-white/10 shadow-xl" />
             <div class="image-overlay">
                 <span class="overlay-text">Click for preview</span>
             </div>
         </div>
 
-        <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/SEO + GEO Content Optimizer/Brand.png', 'Brand alignment score')">
+        <div class="image-container" onclick="openLightbox('/Img/SEO + GEO Content Optimizer/Brand.png', 'Brand alignment score')">
             <img src="/Img/SEO + GEO Content Optimizer/Brand.png" alt="Brand alignment score" class="w-full rounded-2xl border border-white/10 shadow-xl" />
             <div class="image-overlay">
                 <span class="overlay-text">Click for preview</span>
@@ -1316,7 +1316,7 @@
                     <div class="citation-viewport">
     <div id="citationSlider">
         <div class="citation-slide">
-            <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/AI Citation Intelligence/Visibility Score.png', 'AI visibility score')">
+            <div class="image-container" onclick="openLightbox('/Img/AI Citation Intelligence/Visibility Score.png', 'AI visibility score')">
                 <img src="/Img/AI Citation Intelligence/Visibility Score.png" alt="AI visibility score" />
                 <div class="image-overlay">
                     <span class="overlay-text">Click for preview</span>
@@ -1325,7 +1325,7 @@
         </div>
 
         <div class="citation-slide">
-            <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/AI Citation Intelligence/Citations.png', 'AI citation tracking')">
+            <div class="image-container" onclick="openLightbox('/Img/AI Citation Intelligence/Citations.png', 'AI citation tracking')">
                 <img src="/Img/AI Citation Intelligence/Citations.png" alt="AI citation tracking" />
                 <div class="image-overlay">
                     <span class="overlay-text">Click for preview</span>
@@ -1334,7 +1334,7 @@
         </div>
 
         <div class="citation-slide">
-            <div class="image-container" onclick="openLightbox('C:/Users/91733/Desktop/Img/AI Citation Intelligence/Cited URL.png', 'Cited URLs')">
+            <div class="image-container" onclick="openLightbox('/Img/AI Citation Intelligence/Cited URL.png', 'Cited URLs')">
                 <img src="/Img/AI Citation Intelligence/Cited URL.png" alt="Cited URLs" />
                 <div class="image-overlay">
                     <span class="overlay-text">Click for preview</span>
