--- a/index.html
+++ b/index.html
@@ -1982,28 +1982,22 @@
         // Handle Form Submission
 function handleFormSubmit(event) {
     event.preventDefault();
-    
-    const formData = {
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        phone: document.getElementById('phone').value,
-        message: document.getElementById('message').value
-    };
+
+    const form = document.getElementById("demoForm");
 
     fetch("https://script.google.com/macros/s/AKfycbwjcJuJ_0xTJBX3taIG_FClbwWvTDNEpUTHQoQUJMHLrErGJyHg89uy71MyuHEF3rOlag/exec", {
-    method: "POST",
-    mode: "no-cors",
-    body: JSON.stringify(formData)
-})
-.then(() => {
-    alert("Thank you for your interest! We'll get back to you shortly.");
-    document.getElementById('demoForm').reset();
-    closeModal();
-})
-.catch(error => {
-    console.error("Form submission error:", error);
-    alert("Something went wrong. Please try again.");
-});
+        method: "POST",
+        body: new FormData(form)
+    })
+    .then(() => {
+        alert("Thank you for your interest! We'll get back to you shortly.");
+        form.reset();
+        closeModal();
+    })
+    .catch(error => {
+        console.error("Form submission error:", error);
+        alert("Something went wrong. Please try again.");
+    });
 }
         // Image Lightbox Functions
         let currentImageIndex = 0;
